--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -94,6 +94,12 @@ u_fireballistafix_descr
     "Fire ballistas automatically shoot at monks and tunnelers."
 }
 
+ui_browsepath
+{
+	"Please choose your Stronghold Crusader installation directory."
+}
+
+
 // ======================
 //         2.13
 // ======================
