--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -48,6 +48,11 @@ u_fireballistafix_descr
     "Fire ballistas automatically shoot at monks and tunnelers."
 }
 
+ui_browsepath
+{
+	"Wybierz katalog instalacyjny Stronghold Crusader."
+}
+
 // ======================
 //         2.13
 // ======================
