--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -48,6 +48,11 @@ u_fireballistafix_descr
     "Fire ballistas automatically shoot at monks and tunnelers."
 }
 
+ui_browsepath
+{
+	"Пожалуйста, выберите каталог установки Stronghold Crusader."
+}
+
 // ======================
 //         2.13
 // ======================
