Reverted IDAParser. Added localized string descriptions for new UI elements

--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -53,6 +53,36 @@ ui_browsepath
 	"Wybierz katalog instalacyjny Stronghold Crusader."
 }
 
+ui_aicoldversion
+{
+	"Wykryto starą wersję. Kliknij, aby przekonwertować"
+}
+
+ui_aicofferconvert
+{
+	"Konwertuj plik AIC do nowszej wersji?"
+}
+
+ui_aicconvertprompt
+{
+	"Konwersja AIC"
+}
+
+ui_aicselecttooltip
+{
+	"Wybierz poszczególne AI"
+}
+
+ui_aicalreadyselectedtooltip
+{
+	"Ta sztuczna inteligencja została już wybrana. Wybierz to, aby zastąpić."
+}
+
+ui_aicconfirm
+{
+	"Potwierdź wybór"
+}
+
 // ======================
 //         2.13
 // ======================
