--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -68,6 +68,11 @@ ui_aicconvertprompt
 	"AIC Conversion"
 }
 
+ui_aicselect
+{
+	"Сначала отмените выбор других файлов AIC. Следующие символы aic уже выбраны: "
+}
+
 
 // ======================
 //         2.13
