--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -1,4 +1,9 @@
-﻿o_armory_marketplace_weapon_order_fix
+﻿ui_aicconflict
+{
+	"konflikt i zostaną zignorowane"
+}
+
+o_armory_marketplace_weapon_order_fix
 {
 	"Fix armory/marketplace weapon orders to match"
 }
