--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -1,4 +1,50 @@
-﻿ui_StartTroops
+﻿ui_welcometext
+{
+"This is an unofficial patch for Stronghold Crusader.
+The project ist available as open-source on [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch).
+
+Any Crusader version is potentially supported, but since the changes were derived from the 1.41 Steam-Version, incompatibilities may appear.
+The setup will then show error messages. The installed patch version is shown in the bottom left corner of the main menu of the game. 
+Before any changes, backup files will be created. These can be restored via the 'Uninstall'-button or manually.
+
+The team behind the UCP
+
+Creator of the UCP
+[Sh0wdown](https://github.com/Sh0wdown)  
+
+Project Management
+[Kimberly](https://github.com/ByBurton/)  
+[Krarilotus (Youtube)](https://www.youtube.com/channel/UCMXHqa2vmclSoSkuCu_q5rw)
+
+Developers
+[LordHansCapon](https://github.com/LordHansCapon)  
+[np123](https://github.com/patel-nikhil)  
+[J-T-de](https://github.com/J-T-de)  
+[Chaf1812](https://github.com/Chaf1812)  
+
+Translators
+[Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) (Polish)  
+[Lolasik011](https://github.com/Lolasik011) (Russian)  
+[Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Chinese)  
+
+Content Creators   
+[Evrey](https://github.com/Evrey) (aiv)  
+[Tatha](https://www.youtube.com/channel/UC4BrhBzHp1ymnczlkdKcSkg) (aiv,aic)  
+[PitchNeeded](https://github.com/PitchNeeded) (aiv)  
+[Xander10alpha](https://github.com/Xander10alpha) (aic)  
+
+Special thanks of course go to  
+[Firefly Studios](https://fireflyworlds.com/)  
+for the creation of the Stronghold series
+
+And many more
+
+[Udwin (YouTube)](https://www.youtube.com/user/UdwinLP)  
+[PodeCaradox](https://github.com/PodeCaradox)  
+[GRhin](https://www.twitch.tv/grhin)"
+}
+
+ui_StartTroops
 {
 	"StartTroops"
 }
@@ -86,7 +132,6 @@ o_override_identity_menu
 o_override_identity_menu_descr
 {
     "Adds Ranged and Melee unit selection to Set-up Identity menu. ONLY FOR NORMAL GAME MODE!"
-
 }
 
 o_default_multiplayer_speed
@@ -194,34 +239,6 @@ ui_aicHint
 {
 	"Exports the .aic-file from the installer into the crusader folder."
 }
-
-
-ui_welcometext
-{
-"This is an unofficial patch for Stronghold Crusader.
-The project ist available as open-source on [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch).
-
-Any Crusader version is potentially supported, but since the changes where &
-derived with the 1.41 Steam-Version, incompatibilities may appear. The setup &
-will then show error messages. The installed patch version is shown in the &
-bottom left corner of the main menu. Before any changes, backup files will &
-be created. These can be restored via the 'Uninstall'-button or manually.
-
-At this point I would like to thank the Stronghold community for supporting &
-me so enthusiastically.
-
-Special thanks go to:
-[FireFly Studios](https://fireflyworlds.com/) for the creation of the Stronghold series
-[Udwin (YouTube)](https://www.youtube.com/user/UdwinLP), because he made me remember Stronghold
-[Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) for the polish translation
-[Lolasik011](https://github.com/Lolasik011) for the russian translation
-[Evrey](https://github.com/Evrey) for his AI castles
-[Tatha](https://www.youtube.com/channel/UC4BrhBzHp1ymnczlkdKcSkg) for his AI castles
-[PitchNeeded](https://github.com/PitchNeeded) for his AI castles
-[ByBurton](https://github.com/ByBurton) for the AICE and help with the AIC parameters."
-}
-
-
 
 // ======================
 //         1.00
