updated the localization text of Xander to link his youtube rather than his github also updated the polish wellcome text to be fully translated!

--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -33,7 +33,7 @@ UCP制作团队
 [Evrey](https://github.com/Evrey) (aiv)  
 [Tatha](https://www.youtube.com/channel/UC4BrhBzHp1ymnczlkdKcSkg) (aiv,aic)  
 [PitchNeeded](https://github.com/PitchNeeded) (aiv)  
-[Xander10alpha](https://github.com/Xander10alpha) (aic)  
+[Xander10alpha (YouTube)](https://www.youtube.com/channel/UCYlyixfoKPcz-Ixi6Nc383Q) (aic)
 
 特别鸣谢  
 [Firefly Studios](https://fireflyworlds.com/)  
