--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -31,7 +31,7 @@ Inhaltliche Beiträge
 [Evrey](https://github.com/Evrey) (aiv)  
 [Tatha](https://www.youtube.com/channel/UC4BrhBzHp1ymnczlkdKcSkg) (aiv,aic)  
 [PitchNeeded](https://github.com/PitchNeeded) (aiv)  
-[Xander10alpha](https://github.com/Xander10alpha) (aic)  
+[Xander10alpha (YouTube)](https://www.youtube.com/channel/UCYlyixfoKPcz-Ixi6Nc383Q) (aic)
 
 Besonderer Dank geht an
 [Firefly Studios](https://fireflyworlds.com/)  
