--- a/UnofficialCrusaderPatch/Localization/Hungarian.txt
+++ b/UnofficialCrusaderPatch/Localization/Hungarian.txt
@@ -1,4 +1,4 @@
-// ======================
+﻿// ======================
 //         2.14
 // ======================
 
@@ -50,12 +50,12 @@ Továbbá külön köszönet:
 
 ui_StartTroops
 {
-	"Kezdőegységek"
+	"KezdőEgységek"
 }
 
 ui_Resource
 {
-	"Kezdőkészlet"
+	"KezdőKészlet"
 }
 
 ﻿ui_aicconflict
@@ -125,17 +125,17 @@ ai_fix_laddermen_with_enclosed_keep
 
 ai_fix_laddermen_with_enclosed_keep_descr
 {
-    "Ezzel a hibajavítással azok az MI-k, akiknek a vártornyuk körül van zárva, továbbra is tudják az ostromegységeik használni a létrahordozók létráit (az eredeti játékban ez csak a Kígyót érinti)."
+    "Ezzel a hibajavítással azok az MI-k, akiknek a Vártornyuk körül van zárva, ostromegységeik továbbra is tudják használni a Létrahordozók létráit (az eredeti játékban csak a Kígyót érinti)."
 }
 
 o_override_identity_menu
 {
-    "Új beállítások hozzáadása a 'Személyiség beállítások' menühöz"
+    "Új beállítások hozzáadása a 'Identitás beállítások' menühöz"
 }
 
 o_override_identity_menu_descr
 {
-    "Távolsági és közelharci egység kiválasztási lehetőségét adja hozzá a 'Személyiség beállítások' menüponthoz. CSAK NORMÁL JÁTÉK MÓDHOZ!"
+    "Távolsági és közelharci egység kiválasztási lehetőségét adja hozzá a 'Identitás beállítások' menüponthoz. CSAK NORMÁL JÁTÉK MÓDHOZ!"
 }
 
 o_default_multiplayer_speed
@@ -150,17 +150,17 @@ o_default_multiplayer_speed_descr
 
 u_fireballistafix
 {
-    "A tűzhajítógépek lőnek a szerzetesekre és az alagútásókra"
+    "A Tűzhajítógépek lőnek a szerzetesekre és az alagútásókra"
 }
 
 u_fireballistafix_descr
 {
-    "A tűzhajítógépek most már ellenségként észlelik a szerzeteseket és az alagútásókat, mostantól lőnek rájuk."
+    "A Tűzhajítógépek most már ellenségként észlelik a szerzeteseket és az alagútásókat, mostantól lőnek rájuk."
 }
 
 ui_browsepath
 {
-	"Kérjük adja meg a Stronghold Crusader telepítési könyvtárát."
+	"Kérjük adja meg az ön Stronghold Crusader telepítési könyvtárát."
 }
 
 ui_aicoldversion
@@ -198,11 +198,11 @@ o_firecooldown_descr
 }
 u_ballistamonk
 {
-	"A tűzhajítógépek lőnek a szerzetesekre"
+	"A Tűzhajítógépek lőnek a szerzetesekre"
 }
 u_ballistamonk_descr
 {
-	"A tűzhajítógépek automatikusan lőnek a szerzetesekre is."
+	"A Tűzhajítógépek automatikusan lőnek a szerzetesekre is."
 }
 
 aiv_EvreyHistory
@@ -212,7 +212,9 @@ aiv_EvreyHistory
 
 aiv_EvreyHistory_descr
 {
-	"Minden MI Lordnak ad egy új várat, ami a Lordhoz illő, valós történelmi várról, városról lett mintázva. [Készítette: Evrey](https://github.com/Evrey/SHC_AIV/)"
+	"Minden MI Lordnak ad egy új várat, ami a Lordhoz illő, &
+valós történelmi várról, városról lett mintázva. &
+[Készítette: Evrey](https://github.com/Evrey/SHC_AIV/)"
 }
 
 
@@ -266,7 +268,9 @@ u_ArabWall
 
 u_ArabWall_descr
 {
-	"Az eredeti játékban az Arab szablyások rombolják le a várfalat a leglassabban a közelharci egységek közül. A lerombolás sebessége ezentúl kb. megkétszereződik, így épphogy jobbak lesznek a lándzsás egységeknél."
+	"Az eredeti játékban az Arab szablyások rombolják le a várfalat &
+a leglassabban a közelharci egységek közül. A lerombolás sebessége ezentúl kb. &
+megkétszereződik, így épphogy jobbak lesznek a lándzsás egységeknél."
 }
 
 u_spearmen
@@ -316,7 +320,7 @@ ui_continue
 
 ui_wrongpath
 {
-	"A Stronghold Crusader nem található a megadott elérési útvonalon!"
+	"Stronghold Crusader nem található a megadott elérési útvonalon!"
 }
 
 ui_back
@@ -341,7 +345,8 @@ ui_chooseLangTitle
 
 ui_chooseLang
 {
-	"Kérjük válasszon ki egy nyelvet a telepítéshez a lent megjelenített listából."
+	"Kérjük válasszon ki egy nyelvet a telepítéshez a lent &
+megjelenített listából."
 }
 
 ui_accept
@@ -371,7 +376,8 @@ ai_recruitinterval
 
 ai_recruitinterval_descr
 {
-	"Átállítja minden MI Lordnak a toborzási intervallumát a legkisebb értékre. (Patkány/Richárd szint)"
+	"Átállítja minden MI Lordnak a toborzási intervallumát a legkisebb értékre. &
+(Patkány/Richárd szint)"
 }
 
 ai_recruitsleep
@@ -386,7 +392,8 @@ ai_attacklimit
 
 ai_attacklimit_descr
 {
-	"Az eredeti játékban a további egységek limitje, akik az első támadás után csatlakoznak 200-ra van korlátozva. Itt tudod megváltoztatni ezt a korlátozást."
+	"Az eredeti játékban a további egységek limitje, akik az első támadás &
+után csatlakoznak 200-ra van korlátozva. Itt tudod megváltoztatni ezt a korlátozást."
 }
 
 o_gamespeed
@@ -400,7 +407,8 @@ o_gamespeed_descr
  - 10-től 90-ig 5 lépésben
  - 90-től 200-ig 10 lépésben
  - 200-tól 1000-ig 100 lépésben
-Az új értékek elérhetők a játékban a +- billentyűk segítségével, a csúszka a játékmenüben változatlanul maradt."
+Az új értékek elérhetők a játékban a +- billentyűk segítségével, a csúszka &
+a játékmenüben változatlanul maradt."
 }
 
 ui_bugfix
@@ -430,7 +438,11 @@ o_responsivegates
 
 o_responsivegates_descr
 {
-	"A várkapuk mostantól később záródnak be ha ellenség van a közelben és automatikusan gyorsabban kinyílnak, ha már nincs közelben ellenség. A távolság ami szükséges az ellenségnek, hogy a várkapu automatikusan bezáródjon, 200-ról 140-re lett csökkentve. Az idő amikor a várkapu ismét kinyílik, mihelyst nincs ellenség a közelben, 1200-ról 100-ra lett csökkentve."
+	"A várkapuk mostantól később záródnak be ha ellenség van a közelben és &
+automatikusan gyorsabban kinyílnak, ha már nincs közelben ellenség. A távolság &
+ami szükséges az ellenségnek, hogy a várkapu automatikusan bezáródjon, 200-ról &
+140-re lett csökkentve. Az idő amikor a várkapu ismét kinyílik, mihelyst nincs &
+ellenfél a közelben, 1200-ról 100-ra lett csökkentve."
 }
 
 ai_addattack
@@ -440,12 +452,17 @@ ai_addattack
 
 ai_addattack_descr
 {
-	"Az eredeti játékban minden egyes támadás után az egységek száma a következő támadáskor átlagosan 5 egységgel lesz megnövelve. Ez az érték minden MI Lordnak ugyanannyi és itt tudod megváltoztatni."
+	"Az eredeti játékban minden egyes támadás után az egységek száma a &
+következő támadáskor átlagosan 5 egységgel lesz megnövelve. Ez az érték &
+minden MI Lordnak ugyanannyi és itt tudod megváltoztatni."
 }
 
 ai_addattack_alt_descr
 {
-	"Alternatív megoldásként, a további csatlakozó egységek számát az első támadás erősségétől függetlenné lehet tenni. De mivel minden MI Lord különböző számú egységet használ az első támadásnál, ezzel együtt a következő támadások is skálázódnak ahelyett, hogy minden MI Lordnak ugyanaz az értéke lenne.
+	"Alternatív megoldásként, a további csatlakozó egységek számát az első &
+támadás erősségétől függetlenné lehet tenni. De mivel minden MI Lord különböző &
+számú egységet használ az első támadásnál, ezzel együtt a következő támadások &
+is skálázódnak ahelyett, hogy minden MI Lordnak ugyanaz az értéke lenne.
 Például: Skálázási faktor = 0,5
 Szultán támadásainak száma = 10, 15, 20, 25, ...
 Szaladin támadásainak száma = 50, 75, 100, 125, ..."
@@ -453,7 +470,7 @@ Szaladin támadásainak száma = 50, 75, 100, 125, ..."
 
 u_laddermen
 {
-	"Megnövelt páncélzat létrás egységnek a távolsági egységek ellen"
+	"Megnövelt páncélzat Létrás egységnek a távolsági egységek ellen"
 }
 
 u_laddermen_descr
@@ -486,7 +503,7 @@ o_trooplimit_descr
 
 ai_demolish
 {
-	"Az MI Lord lerombol mindent hogy pénzhez jusson deaktiválása"
+	"Deaktiválja azt, hogy az MI Lord leromboljon mindent hogy pénzhez jusson"
 }
 
 ai_demolish_walls
@@ -506,7 +523,10 @@ ai_demolish_walls_descr
 
 ai_demolish_eco_descr
 {
-	"Ha az MI Lord sarokba szorítva érzi magát és gyorsan pénzt akar szerezni az egységekhez, előszeretettel rombolja le a teljes iparát vagy várépületeit Néha ez az esemény láthatólag minden indok nélkül megtörténik és emiatt itt ki tudod kapcsolni."
+	"Ha az MI Lord sarokba szorítva érzi magát és gyorsan pénzt akar szerezni &
+az egységekhez, előszeretettel rombolja le a teljes iparát vagy várépületeit &
+Néha ez az esemény láthatólag minden indok nélkül megtörténik és emiatt itt
+ki tudod kapcsolni."
 }
 
 ai_tethers
@@ -516,7 +536,9 @@ ai_tethers
 
 ai_tethers_descr
 {
-	"Az MI általában minden új kőfejtő építésekor épít egy új ökör karámot is attól függetlenül, hogy mennyi van neki. Ezt itt tudod deaktiválni, mert különben spammelni fogja az ökör karámokat, ha az MI kőfejtőjét mindig lerombolják."
+	"Az MI általában minden új Kőfejtő építésekor épít egy új Ökör karámot is &
+attól függetlenül, hogy mennyi van neki. Ezt itt tudod deaktiválni, mert különben &
+spammelni fogja az Ökör karámokat, ha az MI Kőfejtőjét mindig lerombolják."
 }
 
 
@@ -539,7 +561,10 @@ ai_nosleep
 
 ai_nosleep_descr
 {
-	"Általában az MI szünetelteti a munkát az ipari épületeinél, ha a szükséges erőforrás már nem áll rendelkezésére a raktárban. Eközben a termék kárba veszik amit pl. éppen a fegyverraktárba visznek. Ezt a funkciót itt teljesen ki lehet kapcsolni."
+	"Általában az MI szünetelteti a munkát az ipari épületeinél, &
+ha a szükséges erőforrás már nem áll rendelkezésére a raktárban. &
+Eközben a termék kárba veszik amit pl. éppen a fegyverraktárba visznek. &
+Ezt a funkciót itt teljesen ki lehet kapcsolni."
 }
 
 
@@ -574,7 +599,11 @@ o_onlyai
 
 o_onlyai_descr
 {
-	"Eltávolítja az 1.játékost a nézői módhoz és így 8 MI harcolhat egymással az Egyedi játék módban. Az elmentett játék most már rendesen működik ebben a módban is. Néha előfordulhat olyan hiba, hogy az egész térképen véletlenszerűen feltűnhetnek tárgyak. De ezek csak vizuálisan jelennek meg és egyszerűen megoldható a Játék mentése -> Küldetés befejezése -> Játék betöltésével."
+	"Eltávolítja az 1.játékost a nézői módhoz és így 8 MI harcolhat egymással &
+az Egyedi játék módban. Az elmentett játék most már rendesen működik ebben a &
+módban is. Néha előfordulhat olyan hiba, hogy az egész térképen véletlenszerűen &
+feltűnhetnek tárgyak. De ezek csak vizuálisan jelennek meg és egyszerűen megoldható &
+a Játék mentése -> Küldetés befejezése -> Játék betöltésével."
 }
 
 o_moatvisibility
@@ -584,7 +613,8 @@ o_moatvisibility
 
 o_moatvisibility_descr
 {
-	"Ezzel a beállítással a lehelyezett, de a még nem felásott várárok mindig látható, még akkor is ha nincs kiválasztva a várárokásás."
+	"Ezzel a beállítással a lehelyezett, de a még nem felásott &
+várárok mindig látható, még akkor is ha nincs kiválasztva a várárokásás."
 }
 
 
@@ -595,7 +625,8 @@ o_engineertent
 
 o_engineertent_descr
 {
-	"Ezzel a beállítással az utoljára építésre kiválasztott ostromgép marad kijelölve ha több mérnököt kiválasztottál, így több ostromsátrat is lehet egymás után építeni."
+	"Ezzel a beállítással az utoljára építésre kiválasztott ostromgép marad kijelölve &
+ha több mérnököt kiválasztottál, így több Ostromsátrat is lehet egymás után építeni."
 }
 
 
@@ -616,7 +647,8 @@ ai_demolish_trapped
 
 ai_demolish_trapped_descr
 {
-	" Ha az MI be van zárva és nem jutnak ki az egységei, lerombol mindent. Ezt itt tudod kikapcsolni. (pl. a játékos lerak egy épületet a várkapuja elé és nincs másik bejárata a várnak)"
+	" Ha az MI be van zárva és nem jutnak ki az egységei, lerombol mindent. Ezt itt tudod kikapcsolni. &
+(pl. a játékos lerak egy épületet a várkapuja elé és nincs másik bejárata a várnak)"
 }
 
 
@@ -627,7 +659,8 @@ o_freetrader
 
 o_freetrader_descr
 {
-	"Mivel néha az MI magának add sakk-mattot, ha nincs elég fája és a piacát lerombolták. Itt tudod beállítani hogy a piac építése ingyenes legyen."
+	"Mivel néha az MI magának add sakk-mattot, ha nincs elég fája és a piacát &
+lerombolták, itt tudod beállítani hogy a piac építése ingyenes legyen."
 }
 
 ai_towerengines
@@ -637,7 +670,8 @@ ai_towerengines
 
 ai_towerengines_descr
 {
-	"Általában az MI maximálisan 3 hajítógépet és kővetőgépet épít minden tornyára. Ezen beállítással ez a korlátozás megszűnik."
+	"Általában az MI maximálisan 3 Hajítógépet és Kővetőgépet épít minden tornyára. &
+Ezen beállítással ez a korlátozás megszűnik."
 }
 
 ai_buywood
@@ -647,7 +681,8 @@ ai_buywood
 
 ai_buywood_descr
 {
-	"Ahhoz hogy az íjkészítők stb. ne vigyék el mindig a megvásárolt fát. Az MI ezzel a beállítással mindig 2 fával többet vesz, mint ami szükséges az épületek építéséhez."
+	"Ahhoz hogy az íjkészítők stb. ne vigyék el mindig a megvásárolt fát, &
+az MI ezzel a beállítással mindig 2 fával többet vesz, mint ami szükséges az épületek építéséhez."
 }
 
 o_keys
@@ -711,7 +746,10 @@ ai_attacktarget_weakest
 
 ai_attacktarget_weakest_descr
 {
-	"Ezzel a beállítással az MI Lordok a saját módjukon keresik meg a célpontot a következő támadásukhoz. Ez megakadályozza azt, hogy az egységek támadás közben célpontot változtassanak vagy az MI ne a másik ellenséges várhoz küldje gyülekezni a seregét."
+	"Ezzel a beállítással az MI Lordok a saját módjukon keresik meg a célpontot &
+a következő támadásukhoz. Ez megakadályozza azt, hogy az egységek támadás &
+közben célpontot változtassanak vagy az MI ne a másik ellenséges várhoz küldje &
+gyülekezni a seregét."
 }
 
 
@@ -736,19 +774,26 @@ ai_assaultswitch
 
 ai_assaultswitch_descr
 {
-	"Azok az MI Lordok akik a legerősebbet vagy a leggyengébbet támadják meg, néha hajlamosak voltak a támadás közepén célpontot változtatni, és az egységeiket elküldeni a másik várhoz. Ezzel a beállítással, ez már nem fordul elő, mihelyst a támadást megkezdte, viszont a vár előtti egységek gyülekezésekor még előfordulhat, hogy célpontot vált."
+	"Azok az MI Lordok akik a legerősebbet vagy a leggyengébbet támadják meg, &
+néha hajlamosak voltak a támadás közepén célpontot változtatni, &
+és az egységeiket elküldeni a másik várhoz. Ezzel a beállítással, &
+ez már nem fordul elő, mihelyst a támadást megkezdte, viszont a vár &
+előtti egységek gyülekezésekor még előfordulhat, hogy célpontot vált."
 }
 
 
 
 ai_rebuild
 {
-	"Kijavított MI javítások"
+	"Javított MI javítások"
 }
 
 ai_rebuild_descr
 {
-	"Ezzel a beállítással az MI Lordok megjavítják a toronyromokat is, enyhén megrongált várfalakat, továbbá mérnökök-, alagútásók céhet és olajfőző kunyhót ha a helyük megmaradt. Továbbá az MI most már képes építeni a kőfejtők helye felett is."
+	"Ezzel a beállítással az MI Lordok megjavítják a toronyromokat is, enyhén &
+megrongált várfalakat, továbbá mérnökök-, alagútásók céhet és olajfőző kunyhót &
+ha a gyülekezőhelyük megmaradt. Továbbá az MI most már képes építeni a Kőfejtők &
+gyűjtési helye felett is."
 }
 
 
@@ -767,7 +812,11 @@ o_healer
 
 o_healer_descr
 {
-	"A gyógyszertár gyógyítója mostantól megkeresi a sérült harcosokat, civileket, állatokat és meggyógyítja őket. A hozzá legközelebb lévő célpontokat gyógyítja elöszőr. Minden gyógyító animációval kb. egy lándzsás  1/3 életerejét állítja helyre. A kertekben való mászkálás és a pestisfelhő felkeresése ez által nem lesz lecserélve! Csak a várban való mászkálása lesz kihagyva, ha nincs a hatótávolságán belül beteg."
+	"A gyógyszertár gyógyítója mostantól megkeresi a sérült harcosokat, civileket, &
+állatokat és meggyógyítja őket. A hozzá legközelebb lévő célpontokat gyógyítja elöszőr. &
+Minden gyógyító animációval kb. egy lándzsás  1/3 életerejét állítja helyre. A kertekben &
+való mászkálás és a pestisfelhő felkeresése ez által nem lesz lecserélve! Csak a várban &
+való mászkálása lesz kihagyva, ha nincs a hatótávolságán belül beteg."
 }
 
 
@@ -815,7 +864,10 @@ ai_defense
 
 ai_defense_descr
 {
-	"Kijavítja azt a hibát, ami megakadályozza az MI-t abban, hogy a hiányzó egységekkel megerősítse a várfalat és a tornyot, ameddig rendelkezik még védekező-járőröző egységekkel. Egyébként általánosságban növelve lett az erősítés toborzása, mert egyes MI-nél ez nullára volt állítva."
+	"Kijavítja azt a hibát, ami megakadályozza az MI-t abban, hogy a &
+hiányzó egységekkel megerősítse a várfalat és a tornyot, ameddig &
+rendelkezik még védekező-járőröző egységekkel. Egyébként általánosságban &
+növelve lett az erősítés toborzása, mert egyes MI-nél ez nullára volt állítva."
 }
 
 ai_access
@@ -825,7 +877,9 @@ ai_access
 
 ai_access_descr
 {
-	"Megakadályozza azt, hogy az MI ne rombolja le azt az épületet amihez nem lehet hozzáférni. Ezáltal kijavítható az a hiba, hogy az MI ne építse meg és rombolja le újra és újra mindig azt az épületet amihez nem tudnak eljutni."
+	"Megakadályozza azt, hogy az MI ne rombolja le azt az épületet amihez &
+nem lehet hozzáférni. Ezáltal kijavítható az a hiba, hogy az MI ne építse meg &
+és rombolja le újra és újra mindig azt az épületet amihez nem tudnak eljutni."
 }
 
 ai_moredef
@@ -853,7 +907,8 @@ aiv_tatha
 
 aiv_tatha_descr
 {
-	"Az eredeti játékhoz képest jelentősen erősebb várak. A különböző MI vártípusai ugyanannyira erősek.
+	"Az eredeti játékhoz képest jelentősen erősebb várak. A különböző &
+MI vártípusai ugyanannyira erősek. &
 [Bemutató-Lejátszási lista](https://www.youtube.com/playlist?list=PLvxeAM4gClqDoMU8i8WnTsZ4x8b1vIkTM)"
 }
 
@@ -869,7 +924,13 @@ ai_attackwave
 
 ai_attackwave_descr
 {
-	"Az eredeti játékban az MI mindig csak annyi egységet küld el egyszerre amennyi elérhető várfal van. Azok a várak amik épületekkel vannak körülépítve, azokat az egységek csak elvétve támadják meg. Ezzel a beállítással az egységek az épületeket és az ostromsátrakat is megtámadják illetve azt a várfalat is amit már egy másik támadó egység rombol. Továbbá az MI mostantól több egységet küld az ellenség erődítményére, amint észrevesz egy oda vezető utat."
+	"Az eredeti játékban az MI mindig csak annyi egységet küld el egyszerre &
+amennyi elérhető várfal van. Azok a várak amik épületekkel vannak &
+körülépítve, azokat az egységek csak elvétve támadják meg. Ezzel a &
+beállítással az egységek az épületeket és az ostromsátrakat is &
+megtámadják illetve azt a várfalat is amit már egy másik támadó &
+egység rombol. Továbbá az MI mostantól több egységet küld az ellenség &
+Erődítményére, amint észrevesz egy oda vezető utat."
 }
 
 aiv_pitchsiege
@@ -879,7 +940,9 @@ aiv_pitchsiege
 
 aiv_pitchsiege_descr
 {
-	"Kibővíti a 'Evrey feljavított eredeti várak' módosítást azáltal hogy a Wazir, Disznó, Nizar és Emír tornyaira kővetőgépet és hajítógépet rak. Átszerkesztette: [PitchNeeded](https://github.com/PitchNeeded)."
+	"Kibővíti a 'Evrey feljavított eredeti várak' módosítást azáltal &
+hogy a Wazir, Disznó, Nizar és Emír tornyaira Kővetőgépet és Hajítógépet rak. &
+Átszerkesztette: [PitchNeeded](https://github.com/PitchNeeded)."
 }
 
 aiv_pitchwells
@@ -889,7 +952,8 @@ aiv_pitchwells
 
 aiv_pitchwells_descr
 {
-	"Kibővített 'Evrey feljavított eredeti várak' módosítás melyben egyes MI várak Kutakat és Gyógyszertárakat kapnak. Átszerkesztette: [PitchNeeded](https://github.com/PitchNeeded)."
+	"Kibővített 'Evrey feljavított eredeti várak' módosítás melyben egyes &
+MI várak Kutakat és Gyógyszertárakat kapnak. Átszerkesztette: [PitchNeeded](https://github.com/PitchNeeded)."
 }
 
 aiv_evreyfixed
@@ -899,8 +963,8 @@ aiv_evreyfixed
 
 aiv_evreyfixed_descr
 {
-	"Kijavítja az eredeti MI várak hibáit, mint pl. hiányzó házak és céhek vagy blokkolt kijáratok.
-[Készítette: Evrey](https://github.com/Evrey/SHC_AIV/)"
+	"Kijavítja az eredeti MI várak hibáit, mint pl. hiányzó házak és céhek &
+vagy blokkolt kijáratok. [Készítette: Evrey](https://github.com/Evrey/SHC_AIV/)"
 }
 
 aiv_evreyimproved
@@ -910,6 +974,6 @@ aiv_evreyimproved
 
 aiv_evreyimproved_descr
 {
-	"Új feljavított várakat ad a MI Lordoknak, az eredeti várstílusok alapján.
+	"Új feljavított várakat ad a MI Lordoknak, az eredeti várstílusok alapján. &
 [Készítette: Evrey](https://github.com/Evrey/SHC_AIV/)"
 }
