added our hungarian translator to the wellcome text

--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -31,7 +31,8 @@ UCP制作团队
 翻译提供者
 [Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) (波兰语)  
 [Lolasik011](https://github.com/Lolasik011) (俄语)  
-[Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (中文)  
+[Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (中文)
+[Liegav (YouTube)](https://www.youtube.com/channel/UCFqQMKfYgGb7iFKJagQl_wA) (匈牙利)
 
 内容创建者
 [Evrey](https://github.com/Evrey) (aiv)  
