--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -29,7 +29,8 @@ Developers
 Translators
 [Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) (Polish)  
 [Lolasik011](https://github.com/Lolasik011) (Russian)  
-[Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Chinese)  
+[Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Chinese)
+[Liegav (YouTube)](https://www.youtube.com/channel/UCFqQMKfYgGb7iFKJagQl_wA) (Hungarian)
 
 Content Creators   
 [Evrey](https://github.com/Evrey) (aiv)  
