--- a/UnofficialCrusaderPatch/Localization/Hungarian.txt
+++ b/UnofficialCrusaderPatch/Localization/Hungarian.txt
@@ -29,7 +29,8 @@ Fejlesztők
 Fordítók
 [Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) (Lengyel)  
 [Lolasik011](https://github.com/Lolasik011) (Orosz)  
-[Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Kínai)  
+[Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Kínai)
+[Liegav (YouTube)](https://www.youtube.com/channel/UCFqQMKfYgGb7iFKJagQl_wA) (Magyar)
 
 Tartalom készítők
 [Evrey](https://github.com/Evrey) (aiv)  
