--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -29,7 +29,8 @@ Twórcy
 Tłumacze
 [Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) (Polski)  
 [Lolasik011](https://github.com/Lolasik011) (Rosyjski)  
-[Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Chiński)  
+[Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Chiński)
+[Liegav (YouTube)](https://www.youtube.com/channel/UCFqQMKfYgGb7iFKJagQl_wA) (język węgierski)
 
 Twórcy dodatkowych funkcji   
 [Evrey](https://github.com/Evrey) (aiv)  
