--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -30,6 +30,7 @@ ui_welcometext
 [Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) (Polish)  
 [Lolasik011](https://github.com/Lolasik011),(Steam - YouMoMCallME) (Russian)  
 [Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Chinese)  
+[Liegav (YouTube)](https://www.youtube.com/channel/UCFqQMKfYgGb7iFKJagQl_wA) (Hungarian)
 
 Создатели контента   
 [Evrey](https://github.com/Evrey) (aiv)  
