--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -151,12 +151,12 @@ o_default_multiplayer_speed_descr
 
 u_fireballistafix
 {
-    "Fire ballistas shoot monks and tunnelers"
+    "Fire ballistae shoot monks and tunnelers"
 }
 
 u_fireballistafix_descr
 {
-    "Fire ballistas automatically shoot at monks and tunnelers."
+    "Fire ballistae automatically shoot at monks and tunnelers."
 }
 
 ui_browsepath
