added Heroesflorian to the And many more category

--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -47,7 +47,8 @@ for the creation of the Stronghold series
 其他
 [Udwin (YouTube)](https://www.youtube.com/user/UdwinLP)  
 [PodeCaradox](https://github.com/PodeCaradox)  
-[GRhin](https://www.twitch.tv/grhin)"
+[GRhin](https://www.twitch.tv/grhin)  
+[Heroesflorian](https://github.com/Heroesflorian)"
 }
 
 ui_StartTroops
