- Moat digging units are less likely to disappear while digging moat.

--- a/UnofficialCrusaderPatch/Localization/Hungarian.txt
+++ b/UnofficialCrusaderPatch/Localization/Hungarian.txt
@@ -1,3 +1,17 @@
+﻿﻿﻿// ======================
+//         dev
+// ======================
+
+o_fix_moat_digging_unit_disappearing
+{
+"Fix moat digging units disappear bug"
+}
+
+o_fix_moat_digging_unit_disappearing_descr
+{
+"Fixes the bug where moat diggers would disappear randomly while digging. Note that they can still disappear if you order them to move while digging and they happen to stand on an unwalkable tile!"
+}
+
 // ======================
 //         2.14
 // ======================
